# ip2unix

./: .clang-tidy  .lgtm.yml  CHANGELOG.md  INSTALL.adoc  README.adoc  default.nix  flake.nix  lgtm.yml  meson.build  meson_options.txt  release.nix
.github/workflows/: main.yml
doc/: meson.build
nix/: badge.nix
scripts/: findlibc.py  generrno.py  genoffsets.py  gensyms.py
src/: blackhole.cc  blackhole.hh  dynports.hh  globpath.cc  globpath.hh  ip2unix.cc  logging.cc  logging.hh  meson.build  preload.cc  realcalls.cc  realcalls.hh  rng.cc  rng.hh  rules.cc  rules.hh  serial.cc  serial.hh  sockaddr.cc  sockaddr.hh  socket.cc  socket.hh  socketpath.hh  sockopts.cc  sockopts.hh  systemd.cc  systemd.hh  types.hh
src/dynports/: dynports.cc
src/rules/: errno_list.hh  match.cc  parse.cc
tests/: conftest.py  connector.py  helper.py  meson.build  test_abstract_socket.py  test_accept_no_peer_addr.py  test_addrinfo.py  test_bind_any.py  test_bind_samerule.py  test_blackhole.py  test_closeallfds.py  test_connections.py  test_double_accept.py  test_dup.py  test_epoll_ctl.py  test_fdleak.py  test_from_unix.py  test_ignore.py  test_localhost.py  test_port_range.py  test_preliminary_unlink.py  test_program_args.py  test_reject.py  test_rule_args.py  test_rule_file.py  test_rules.py  test_run_direct.py  test_sendrecv_direct.py  test_sockopt_fail.py  test_sockopts.py  test_wrong_unlink.py
tests/helpers/: accept_no_peer_addr.cc  meson.build
tests/programs/: mariadb-php-abstract.nix  multiple-preload.nix  rsession.nix
tests/unit/: dynports.cc  globpath.cc  meson.build  serial.cc
tests/vm/: systemd-multi.nix  systemd-single.nix  systemd.nix
